Fix layout glitches on small devices
- Added top margin to errorlist on small screens
- Proper nesting for the form on the code page
- Removed bottom margin from form itself, and from form button container div

--- a/public/scss/_forms.scss
+++ b/public/scss/_forms.scss
@@ -14,7 +14,7 @@
 }
 
 form.pure-form.pure-form-stacked {
-  margin: $space-xl 0;
+  margin-top: $space-xl;
   max-width: 300px;
 
   @include sm {
@@ -33,7 +33,7 @@ form.pure-form.pure-form-stacked {
 }
 
 form.pure-form.pure-form-stacked {
-  > div:not(.button-left) {
+  > div:not(:last-of-type) {
     margin-bottom: $space-lg;
   }
 
